--- a/FoodPin/Base.lproj/Main.storyboard
+++ b/FoodPin/Base.lproj/Main.storyboard
@@ -106,7 +106,7 @@
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="heart-tick" translatesAutoresizingMaskIntoConstraints="NO" id="9e8-r1-C7a" userLabel="Heart Image View">
                                             <rect key="frame" x="364" y="110" width="30" height="30"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <color key="tintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </imageView>
                                     </subviews>
                                     <constraints>
@@ -180,6 +180,18 @@
                                 <viewLayoutGuide key="contentLayoutGuide" id="v5i-Hl-Xkt"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="QEE-SW-YhI"/>
                             </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I4x-jD-JhI">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="clickOnScreen:" destination="FRK-Bj-GqP" eventType="touchUpInside" id="zo1-u7-u7I"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="heart-tick" translatesAutoresizingMaskIntoConstraints="NO" id="9Dd-9K-0rm" userLabel="Heart Image View in Detail">
+                                <rect key="frame" x="361" y="214" width="33" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" systemColor="systemRedColor"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="bE5-f5-Ifv"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -194,6 +206,7 @@
                     <connections>
                         <outlet property="ingredientsLabel" destination="g8h-6f-6Wp" id="9yl-vK-fQG"/>
                         <outlet property="recipeDescriptionLabel" destination="0pZ-6d-95a" id="x3y-fP-CXm"/>
+                        <outlet property="recipeFaviritesIndicator" destination="9Dd-9K-0rm" id="Zvy-Z9-Lgr"/>
                         <outlet property="recipeImageView" destination="3uZ-Gh-uIP" id="l7w-at-0oA"/>
                         <outlet property="recipeNameLabel" destination="Uar-Em-9I9" id="aGv-7R-dXg"/>
                     </connections>
@@ -228,6 +241,9 @@
         <image name="upstate" width="480" height="480"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
